--- a/config.json
+++ b/config.json
@@ -26,163 +26,205 @@
             ],
             "game_options":[
                 {"title":"참여", "text":"첫 바이인 : 무료\n(선착순)"},
-                {"title":"리바인", "text":"무료참여권 2장"},
+                {"title":"리바인", "text":"매장이용권 2장"},
                 {"title":"경기방식", "text":"리바인(1회)"},
                 {"title":"최대 엔트리", "text":"11"},
-                {"title":"스타팅 칩(사전예약자)", "text":"15,000(+5,000)"},
+                {"title":"스타팅 칩", "text":"20,000"},
                 {"title":"리바인 칩", "text":"30,000"},
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"신세계상품권 10만원\nor 무료참여권 10장"}
+                {"title":"1등", "text":"신세계상품권 10만원\nor 매장이용권 12장"}
             ]
         },
         {
-            "name":"무참 3장",
-            "display_name":"무료참여권 3장(Prize 60%)",
+            "name":"이용권 3장",
+            "display_name":"매장이용권 3장(Prize 60%)",
             "data":[
                 [100,200,0,10],
                 [200,400,0,10],
                 [400,800,0,10],
-                [500,1000,0,10],
+                [600,1200,0,10],
                 [800,1600,0,10],
-                [1000,2000,0,10],
                 [-2,-1,0,5],
-                [2000,4000,4000,8],
-                [4000,8000,8000,8],
+                [1000,2000,2000,10],
+                [2000,4000,4000,10],
+                [2500,5000,5000,10],
+                [3000,6000,6000,10],
+                [4000,8000,8000,10],
+                [-2,-1,0,10],
                 [5000,10000,10000,8],
+                [6000,12000,12000,8],
                 [8000,16000,16000,8],
                 [10000,20000,20000,8],
+                [15000,30000,30000,8],
+                [-2,-1,0,5],
                 [20000,40000,40000,8],
                 [30000,60000,60000,8],
-                [-2,-1,0,5],
                 [40000,80000,80000,8],
                 [50000,100000,100000,8],
                 [60000,120000,120000,8],
+                [-2,-1,0,5],
                 [80000,160000,160000,8],
-                [100000,200000,200000,8]
+                [100000,200000,200000,8],
+                [150000,300000,300000,8],
+                [200000,400000,400000,8],
+                [250000,500000,500000,8]
             ],
             "game_options":[
-                {"title":"참여", "text":"무료참여권 3장"},
-                {"title":"경기방식", "text":"리바인(1회)"},
-                {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅 칩(사전예약자)", "text":"20,000(+5,000)"},
-                {"title":"리바인 칩", "text":"35,000"},
-                {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
+                {"title":"참여", "text":"매장이용권 3장"},
+                {"title":"최대 엔트리", "text":"20"},
+                {"title":"바인마감", "text":"2 break"},
+                {"title":"스타팅칩", "text":"30,000"},
+                {"title":"리엔트리칩", "text":"40,000"},
+                {"title":"블라인드", "text":"10분(2 break 8분)"}
             ],
             "giveaway":[
-                {"title":"시상", "text":"Prize 60%"}
+                {"title":"1등", "text":"260,000 GTD"},
+                {"title":"2등", "text":"100,000 GTD"}
             ]
         },
         {
-            "name":"무참 5장",
-            "display_name":"무료참여권 5장",
-            "data":[
-                [100,200,0,10],
-                [200,400,0,10],
-                [400,800,0,10],
-                [500,1000,0,10],
-                [800,1600,0,10],
-                [1000,2000,0,10],
-                [-2,-1,0,5],
-                [2000,4000,0,8],
-                [4000,8000,0,8],
-                [5000,10000,0,8],
-                [8000,16000,0,8],
-                [10000,20000,0,8],
-                [20000,40000,0,8],
-                [30000,60000,0,8],
-                [-2,-1,0,5],
-                [40000,80000,0,8],
-                [50000,100000,0,8],
-                [60000,120000,0,8],
-                [80000,160000,0,8],
-                [100000,200000,0,8]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"무료참여권 5장"},
-                {"title":"경기방식", "text":"리바인(1회)"},
-                {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅 칩(사전예약자)", "text":"25,000(+5,000)"},
-                {"title":"리바인 칩", "text":"40,000"},
-                {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
-            ],
-            "giveaway":[
-                {"title":"시상", "text":"500,000 GTD"}
-            ]
-        },
-        {
-            "name":"무참 10장",
-            "display_name":"무료참여권 10장",
-            "data":[
-                [100,200,0,10],
-                [200,400,0,10],
-                [400,800,0,10],
-                [500,1000,0,10],
-                [800,1600,0,10],
-                [1000,2000,0,10],
-                [-2,-1,0,5],
-                [2000,4000,4000,10],
-                [4000,8000,8000,10],
-                [5000,10000,10000,10],
-                [8000,16000,16000,10],
-                [10000,20000,20000,10],
-                [20000,40000,40000,10],
-                [30000,60000,60000,10],
-                [-2,-1,0,5],
-                [40000,80000,80000,10],
-                [50000,100000,100000,10],
-                [60000,120000,120000,10],
-                [80000,160000,160000,10],
-                [100000,200000,200000,10]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"무료참여권 10장"},
-                {"title":"경기방식", "text":"리바인(1회)"},
-                {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅 칩(사전예약자)", "text":"30,000(+10,000)"},
-                {"title":"리바인 칩", "text":"50,000"},
-                {"title":"블라인드", "text":"10분"}
-            ],
-            "giveaway":[
-                {"title":"시상", "text":"Prize 70%"}
-            ]
-        },
-        {
-            "name":"무참 15장",
-            "display_name":"무료참여권 15장(Prize 80%)",
+            "name":"이용권 5장",
+            "display_name":"매장이용권 5장(Prize 65%)",
             "data":[
                 [100,200,0,12],
                 [200,400,0,12],
                 [400,800,0,12],
-                [500,1000,0,12],
+                [600,1200,0,12],
                 [800,1600,0,12],
-                [1000,2000,0,12],
                 [-2,-1,0,5],
-                [2000,4000,4000,10],
-                [4000,8000,8000,10],
+                [1000,2000,2000,12],
+                [2000,4000,4000,12],
+                [2500,5000,5000,12],
+                [3000,6000,6000,12],
+                [4000,8000,8000,12],
+                [-2,-1,0,10],
                 [5000,10000,10000,10],
+                [6000,12000,12000,10],
                 [8000,16000,16000,10],
                 [10000,20000,20000,10],
+                [15000,30000,30000,10],
+                [-2,-1,0,5],
                 [20000,40000,40000,10],
                 [30000,60000,60000,10],
-                [-2,-1,0,5],
                 [40000,80000,80000,10],
                 [50000,100000,100000,10],
                 [60000,120000,120000,10],
+                [-2,-1,0,5],
                 [80000,160000,160000,10],
-                [100000,200000,200000,10]
+                [100000,200000,200000,10],
+                [150000,300000,300000,10],
+                [200000,400000,400000,10],
+                [250000,500000,500000,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"무료참여권 15장"},
-                {"title":"경기방식", "text":"리바인(1회)"},
-                {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅 칩(사전예약자)", "text":"40,000(+10,000)"},
-                {"title":"리바인 칩", "text":"70,000"},
-                {"title":"블라인드", "text":"12분(칩체인지 후 10분)"}
+                {"title":"참여", "text":"매장이용권 5장"},
+                {"title":"최대 엔트리", "text":"20"},
+                {"title":"바인마감", "text":"2 break"},
+                {"title":"스타팅칩", "text":"50,000"},
+                {"title":"리엔트리칩", "text":"70,000"},
+                {"title":"블라인드", "text":"12분(2 break 10분)"}
             ],
             "giveaway":[
-                {"title":"시상", "text":"Prize 80%"}
+                {"title":"1등", "text":"450,000 GTD"},
+                {"title":"2등", "text":"200,000 GTD"}
+            ]
+        },
+        {
+            "name":"이용권 10장",
+            "display_name":"매장이용권 10장(Prize 70%)",
+            "data":[
+                [100,200,0,15],
+                [200,400,0,15],
+                [400,800,0,15],
+                [600,1200,0,15],
+                [800,1600,0,15],
+                [-2,-1,0,5],
+                [1000,2000,2000,15],
+                [2000,4000,4000,15],
+                [2500,5000,5000,15],
+                [3000,6000,6000,15],
+                [4000,8000,8000,15],
+                [-2,-1,0,10],
+                [5000,10000,10000,12],
+                [6000,12000,12000,12],
+                [8000,16000,16000,12],
+                [10000,20000,20000,12],
+                [15000,30000,30000,12],
+                [-2,-1,0,5],
+                [20000,40000,40000,12],
+                [30000,60000,60000,12],
+                [40000,80000,80000,12],
+                [50000,100000,100000,12],
+                [60000,120000,120000,12],
+                [-2,-1,0,5],
+                [80000,160000,160000,12],
+                [100000,200000,200000,12],
+                [150000,300000,300000,12],
+                [200000,400000,400000,12],
+                [250000,500000,500000,12]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"매장이용권 10장"},
+                {"title":"최대 엔트리", "text":"20"},
+                {"title":"바인마감", "text":"2 break"},
+                {"title":"스타팅칩", "text":"80,000"},
+                {"title":"리엔트리칩", "text":"100,000"},
+                {"title":"블라인드", "text":"15분(2 break 12분)"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":"800,000 GTD"},
+                {"title":"2등", "text":"400,000 GTD"},
+                {"title":"3등", "text":"200,000 GTD"}
+            ]
+        },
+        {
+            "name":"이용권 15장",
+            "display_name":"매장이용권 15장(Prize 70%)",
+            "data":[
+                [100,200,0,15],
+                [200,400,0,15],
+                [400,800,0,15],
+                [600,1200,0,15],
+                [800,1600,0,15],
+                [-2,-1,0,5],
+                [1000,2000,2000,15],
+                [2000,4000,4000,15],
+                [2500,5000,5000,15],
+                [3000,6000,6000,15],
+                [4000,8000,8000,15],
+                [-2,-1,0,10],
+                [5000,10000,10000,12],
+                [6000,12000,12000,12],
+                [8000,16000,16000,12],
+                [10000,20000,20000,12],
+                [15000,30000,30000,12],
+                [-2,-1,0,5],
+                [20000,40000,40000,12],
+                [30000,60000,60000,12],
+                [40000,80000,80000,12],
+                [50000,100000,100000,12],
+                [60000,120000,120000,12],
+                [-2,-1,0,5],
+                [80000,160000,160000,12],
+                [100000,200000,200000,12],
+                [150000,300000,300000,12],
+                [200000,400000,400000,12],
+                [250000,500000,500000,12]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"매장이용권 10장"},
+                {"title":"최대 엔트리", "text":"20"},
+                {"title":"바인마감", "text":"2 break"},
+                {"title":"스타팅칩", "text":"100,000"},
+                {"title":"리엔트리칩", "text":"120,000"},
+                {"title":"블라인드", "text":"15분(2 break 12분)"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":"120,000 GTD"},
+                {"title":"2등", "text":"600,000 GTD"},
+                {"title":"3등", "text":"300,000 GTD"}
             ]
         },
         {
@@ -226,50 +268,57 @@
         },
         {
             "name":"오픈 이벤트대회",
-            "display_name":"AXS 김포걸포점 오픈 이벤트대회",
+            "display_name":"액시스 오픈 이벤트대회",
             "data":[
-                [100,200,0,20],
-                [200,400,0,20],
-                [400,800,0,20],
-                [500,1000,0,20],
+                [100,200,0,15],
+                [200,400,0,15],
+                [400,800,0,15],
+                [600,1200,0,15],
+                [800,1600,0,15],
                 [-2,-1,0,10],
-                [600,1200,1200,20],
-                [800,1600,1600,20],
-                [1000,2000,2000,20],
-                [2000,4000,4000,20],
-                [-2,-1,0,30],
+                [1000,2000,2000,15],
+                [2000,4000,4000,15],
+                [2500,5000,5000,15],
+                [3000,6000,6000,15],
                 [4000,8000,8000,15],
-                [5000,10000,10000,15],
-                [6000,12000,12000,15],
-                [8000,16000,16000,15],
+                [-2,-1,0,20],
+                [5000,10000,10000,12],
+                [6000,12000,12000,12],
+                [8000,16000,16000,12],
+                [10000,20000,20000,12],
+                [15000,30000,30000,12],
                 [-2,-1,0,10],
-                [10000,20000,20000,15],
-                [20000,40000,40000,15],
-                [40000,80000,80000,15],
-                [50000,100000,100000,15],
+                [20000,40000,40000,12],
+                [30000,60000,60000,12],
+                [40000,80000,80000,12],
+                [50000,100000,100000,12],
+                [60000,120000,120000,12],
                 [-2,-1,0,10],
-                [60000,120000,120000,15],
-                [80000,160000,160000,15],
-                [100000,200000,200000,15],
-                [200000,400000,400000,15]
+                [80000,160000,160000,12],
+                [100000,200000,200000,12],
+                [150000,300000,300000,12],
+                [200000,400000,400000,12],
+                [250000,500000,500000,15]
             ],
             "game_options":[
-                {"title":"참여", "text":"무료참여권 5장"},
-                {"title":"경기방식", "text":"2리바인(리엔트리:2리바인 소진시 가능)"},
-                {"title":"최대 엔트리", "text":"36(최대 27명 예약 마감)"},
-                {"title":"블라인드", "text":"20분(~lv8)/15분(lv.9~)"},
+                {"title":"참여", "text":"첫바인 무료/리바인,리엔트리 5장"},
+                {"title":"경기방식", "text":"2리바인 , 애드온"},
+                {"title":"최대 엔트리", "text":"36"},
+                {"title":"블라인드", "text":"15분/12분(애드온 후)"},
                 {"title":"바인마감", "text":"Break 2 애드온"},
-                {"title":"스타팅 칩(사전예약자 )", "text":"20,000(+10,000)"},
-                {"title":"리바인", "text":"40,000"},
-                {"title":"리엔트리", "text":"40,000"},
-                {"title":"애드온", "text":"70,000"}
+                {"title":"스타팅 칩(사전예약자 )", "text":"30,000(+10,000)"},
+                {"title":"1리바인", "text":"50,000"},
+                {"title":"2리바인", "text":"60,000"},
+                {"title":"애드온", "text":"100,000"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"아이폰12 PRO MAX 256기가"},
-                {"title":"2등", "text":"아이패드 에어 4세대 64기가"},
-                {"title":"3등", "text":"에어팟 프로"},
-                {"title":"4등", "text":"무료참여권 10장"},
-                {"title":"5등", "text":"무료참여권 5장"}
+                {"title":"1등", "text":"아이패드 에어 4세대 64기가"},
+                {"title":"2등", "text":"거북이 금 한돈+15장"},
+                {"title":"3등", "text":"에어팟 프로+10장"},
+                {"title":"4등", "text":"무료참여권 20장"},
+                {"title":"5등", "text":"무료참여권 15장"},
+                {"title":"6등", "text":"무료참여권 10장"},
+                {"title":"7등", "text":"무료참여권 5장"}
             ]
         },
         {
