--- a/config.json
+++ b/config.json
@@ -8,23 +8,23 @@
             "name":"무료토너",
             "display_name":"무료토너!!!!",
             "data":[
-                [100,200,0,6],
-                [200,400,0,6],
-                [400,800,0,6],
-                [600,1200,0,6],
-                [800,1600,0,6],
+                [100,200,0,5],
+                [200,400,0,5],
+                [400,800,0,5],
+                [600,1200,0,5],
+                [800,1600,0,5],
                 [-2,-1,0,5],
-                [1000,2000,0,6],
-                [2000,4000,0,6],
-                [4000,8000,0,6],
-                [6000,12000,0,6],
-                [8000,16000,0,6],
+                [1000,2000,0,5],
+                [2000,4000,0,5],
+                [4000,8000,0,5],
+                [6000,12000,0,5],
+                [8000,16000,0,5],
                 [-2,-1,0,5],
-                [10000,20000,0,6],
-                [20000,40000,0,6],
-                [30000,60000,0,6],
-                [40000,80000,0,6],
-                [50000,100000,0,6]
+                [10000,20000,0,5],
+                [20000,40000,0,5],
+                [30000,60000,0,5],
+                [40000,80000,0,5],
+                [50000,100000,0,5]
             ],
             "game_options":[
                 {"title":"참여", "text":"바이인 : 무료"},
@@ -39,23 +39,23 @@
             "name":"100% 프라이즈 ",
             "display_name":"100% 프라이즈!",
             "data":[
-                [100,200,0,6],
-                [200,400,0,6],
-                [400,800,0,6],
-                [600,1200,0,6],
-                [800,1600,0,6],
+                [100,200,0,5],
+                [200,400,0,5],
+                [400,800,0,5],
+                [600,1200,0,5],
+                [800,1600,0,5],
                 [-2,-1,0,5],
-                [1000,2000,0,6],
-                [2000,4000,0,6],
-                [4000,8000,0,6],
-                [6000,12000,0,6],
-                [8000,16000,0,6],
+                [1000,2000,0,5],
+                [2000,4000,0,5],
+                [4000,8000,0,5],
+                [6000,12000,0,5],
+                [8000,16000,0,5],
                 [-2,-1,0,5],
-                [10000,20000,0,6],
-                [20000,40000,0,6],
-                [30000,60000,0,6],
-                [40000,80000,0,6],
-                [50000,100000,0,6]
+                [10000,20000,0,5],
+                [20000,40000,0,5],
+                [30000,60000,0,5],
+                [40000,80000,0,5],
+                [50000,100000,0,5]
             ],
             "game_options":[
                 {"title":"참여", "text":"바이인 : 1장"},
@@ -71,6 +71,42 @@
         {
             "name":"이용권 3장",
             "display_name":"식음료 쿠폰 3장(Prize 75%)",
+            "data":[
+                [100,200,0,7],
+                [200,400,0,7],
+                [400,800,0,7],
+                [600,1200,0,7],
+                [800,1600,0,7],
+                [-2,-1,0,5],
+                [1000,2000,0,7],
+                [2000,4000,0,7],
+                [4000,8000,0,7],
+                [6000,12000,0,7],
+                [8000,16000,0,7],
+                [-2,-1,0,5],
+                [10000,20000,0,7],
+                [20000,40000,0,7],
+                [30000,60000,0,7],
+                [40000,80000,0,7],
+                [50000,100000,0,7]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"식음료 쿠폰 3장"},
+                {"title":"최대 엔트리", "text":"20"},
+                {"title":"스타팅칩", "text":"30,000"},
+                {"title":"1 리엔트리", "text":"40,000"},
+                {"title":"2 리엔트리", "text":"60,000"},
+                {"title":"레지마감", "text":"레벨 11"},
+                {"title":"블라인드", "text":"8분"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
+            ]
+        },
+        {
+            "name":"이용권 5장",
+            "display_name":"식음료 쿠폰 5장",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
@@ -91,13 +127,14 @@
                 [50000,100000,0,8]
             ],
             "game_options":[
-                {"title":"참여", "text":"식음료 쿠폰 3장"},
-                {"title":"최대 엔트리", "text":"20"},
-                {"title":"스타팅칩", "text":"30,000"},
-                {"title":"1 리엔트리", "text":"40,000"},
-                {"title":"2 리엔트리", "text":"60,000"},
+                {"title":"참여", "text":"식음료 쿠폰 5장"},
+                {"title":"최대 엔트리", "text":"16"},
+                {"title":"스타팅칩", "text":"40,000"},
+                {"title":"얼리(예약자)", "text":"+10,000"},
+                {"title":"1 리엔트리", "text":"60,000"},
+                {"title":"2 리엔트리", "text":"70,000"},
                 {"title":"레지마감", "text":"레벨 11"},
-                {"title":"블라인드", "text":"8분"}
+                {"title":"블라인드", "text":"9분"}
             ],
             "giveaway":[
                 {"title":"1등", "text":""},
@@ -105,8 +142,8 @@
             ]
         },
         {
-            "name":"이용권 5장",
-            "display_name":"식음료 쿠폰 5장(Prize 75%)",
+            "name":"이용권 10장",
+            "display_name":"식음료 쿠폰 10장",
             "data":[
                 [100,200,0,9],
                 [200,400,0,9],
@@ -127,43 +164,6 @@
                 [50000,100000,0,9]
             ],
             "game_options":[
-                {"title":"참여", "text":"식음료 쿠폰 5장"},
-                {"title":"최대 엔트리", "text":"16"},
-                {"title":"스타팅칩", "text":"40,000"},
-                {"title":"얼리(예약자)", "text":"+10,000"},
-                {"title":"1 리엔트리", "text":"60,000"},
-                {"title":"2 리엔트리", "text":"70,000"},
-                {"title":"레지마감", "text":"레벨 11"},
-                {"title":"블라인드", "text":"9분"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
-            ]
-        },
-        {
-            "name":"이용권 10장",
-            "display_name":"식음료 쿠폰 10장(Prize 75%)",
-            "data":[
-                [100,200,0,10],
-                [200,400,0,10],
-                [400,800,0,10],
-                [600,1200,0,10],
-                [800,1600,0,10],
-                [-2,-1,0,5],
-                [1000,2000,0,10],
-                [2000,4000,0,10],
-                [4000,8000,0,10],
-                [6000,12000,0,10],
-                [8000,16000,0,10],
-                [-2,-1,0,5],
-                [10000,20000,0,10],
-                [20000,40000,0,10],
-                [30000,60000,0,10],
-                [40000,80000,0,10],
-                [50000,100000,0,10]
-            ],
-            "game_options":[
                 {"title":"참여", "text":"식음료 쿠폰 10장"},
                 {"title":"최대 엔트리", "text":"16"},
                 {"title":"스타팅칩", "text":"80,000"},
@@ -178,8 +178,8 @@
             ]
         },
         {
-            "name":"월간챔피언전",
-            "display_name":"월간챔피언 시드권 쟁탈전",
+            "name":"이용권 10장",
+            "display_name":"식음료 쿠폰 15장",
             "data":[
                 [100,200,0,10],
                 [200,400,0,10],
